Support for direct and api call

--- a/lambda/CMakeLists.txt
+++ b/lambda/CMakeLists.txt
@@ -32,10 +32,12 @@ target_sources(
 
         src/handler.cpp
         src/json_decoder.cpp
+		src/lambda_config.cpp
 
         include/handler.hpp
         include/json_decoder.hpp
         include/task_type.hpp
+		include/lambda_config.hpp
         include/exception.hpp
 )
 
