--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -116,6 +116,9 @@ jobs:
         working-directory: ${{ github.workspace }}/build
         run: cmake --build . --config Release -v --target aws-lambda-package-aws_lambda_worker -j 6
 
+      - name: Change artifact name
+        run: mv ${{ github.workspace }}/build/aws_lambda_worker.zip ${{ github.workspace }}/build/aws_lambda_worker-debug.zip
+
       - name: Upload artifacts
         if: inputs.deploy-artifacts
         uses: actions/upload-artifact@v3
